--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/QFults/node02#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "chalk": "^4.0.0",
     "inquirer": "^7.1.0"
   }
